--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="query_item_remove">Remove</string>
     <string name="main_ip">IP</string>
     <string name="main_port">PORT</string>
+    <string name="query_more_count">Count</string>
+    <string name="edit_svresperr"><![CDATA[Error occurred when contacting server. Try to request < 50 images.]]></string>
+    <string name="edit_err_item_load">Some item has failed to display, removing it...</string>
 </resources>
