--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="main_op_train">Train</string>
     <string name="main_serverip">Server IP</string>
     <string name="edit_custq">Uploaded by User</string>
+    <string name="edit_saving">Saving, please wait</string>
 </resources>
