--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="main_serverip">Server IP</string>
     <string name="edit_custq">Uploaded by User</string>
     <string name="edit_saving">Saving, please wait</string>
+    <string name="results_error">Error: Parceable not transfered</string>
 </resources>
