--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,11 @@
     <string name="edit_saving">Saving, please wait</string>
     <string name="results_error">Error: Parceable not transferred</string>
     <string name="query_thumb_nores">No Images</string>
+    <string name="mark_title">Select Object(s)</string>
+    <string name="mark_exit">Are you sure to cancel marking?</string>
+    <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="done">Done</string>
+    <string name="mark_loading">Loading image...</string>
+    <string name="mark_trouble">Trouble with loading image, removing it..</string>
 </resources>
