--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="done">Done</string>
     <string name="mark_loading">Loading image...</string>
     <string name="mark_trouble">Trouble with loading image, removing it..</string>
+    <string name="mark_deleteall">Remove all</string>
 </resources>
