--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,13 +69,15 @@
     <string name="mark_title">Select Object(s)</string>
     <string name="mark_exit">Are you sure to cancel marking?</string>
     <string name="delete">Delete</string>
+    <string name="mark_delete">Delete image</string>
     <string name="add">Add</string>
     <string name="done">Done</string>
-    <string name="mark_loading">Loading image...</string>
+    <string name="mark_loading">Loading image…</string>
     <string name="mark_troubleRm">Trouble with loading image, removing it..</string>
     <string name="mark_deleteall">Remove all</string>
     <string name="mark_trouble">Trouble with loading this image</string>
     <string name="edit_marking">Would you like to mark data now?</string>
-    <string name="remove">Remove</string>
+    <string name="mark_remove">Remove mark</string>
     <string name="results_mark">Mark data</string>
+    <string name="artobj_status_notmarked">Has unmarked images</string>
 </resources>
